--- a/HW04/russom_hw04.Rmd
+++ b/HW04/russom_hw04.Rmd
@@ -31,7 +31,19 @@ Enter your code chunks for Section 3.2 here.
 
 Get in the habit of entering a brief description of what each chunk of code does. Enter this above the chunk, like I did in Section 3.1.
 
+Load mpg data
 
+
+```{r}
+ggplot2::mpg
+```
+
+Create a scatterplot
+
+```{r}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy))
+```
 
 #### Section 3.2 Questions
 
@@ -74,6 +86,36 @@ ggplot(data = mpg)+
 
 
 ### Section 3.3: Aesthetic mappings
+
+Scatterplot with car class color coded
+
+```{r}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy, color = class))
+```
+scatterplot with class using size aesthetic
+
+```{r}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy, size = class))
+```
+
+Scatterplot with alpha aesthetic
+```{r}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy, alpha = class))
+```
+Scatterplot with shape aesthetic
+```{r}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy, shape = class))
+```
+Scatterplot with manual color added
+
+```{r}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy), color = "blue")
+```
 
 
 #### Section 3.3 questions
@@ -137,6 +179,21 @@ ggplot(data = mpg)+
 
 ### Section 3.5: Facets
 
+Split plot in to facets 
+
+```{r}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy)) + 
+  facet_wrap(~ class, nrow = 2)
+```
+split plot in to two variables 
+
+```{r}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy)) + 
+  facet_grid(drv ~ cyl)
+```
+
 
 
 #### Section 3.5 questions
@@ -195,6 +252,59 @@ ggplot(data = mpg) +
 
 ### Section 3.6: Geometric objects
 
+scatterplot of mpg data
+```{r}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy))
+
+```
+Line graph of mpg data 
+```{r}
+ggplot(data = mpg) + 
+  geom_smooth(mapping = aes(x = displ, y = hwy))
+```
+line graph with line types identifying vehicle drivetrain types
+```{r}
+ggplot(data = mpg) + 
+  geom_smooth(mapping = aes(x = displ, y = hwy, linetype = drv))
+```
+Line graph
+```{r}
+ggplot(data = mpg) +
+  geom_smooth(mapping = aes(x = displ, y = hwy))
+```
+
+Line graph with line type showing vehicle drive train type
+```{r}
+ggplot(data = mpg) +
+  geom_smooth(mapping = aes(x = displ, y = hwy, group = drv))
+    
+```
+Line graph with drive train type indicated by line color 
+```{r}
+ggplot(data = mpg) +
+  geom_smooth(
+    mapping = aes(x = displ, y = hwy, color = drv),
+    show.legend = FALSE)
+```
+Scatterplot and line graph of mpg data
+```{r}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy)) +
+  geom_smooth(mapping = aes(x = displ, y = hwy))
+```
+Line graph and scatterplot with color aesthetic 
+```{r}
+ggplot(data = mpg, mapping = aes(x = displ, y = hwy)) + 
+  geom_point(mapping = aes(color = class)) + 
+  geom_smooth()
+```
+Line graph and scatterplot with color aethestic without standard deviation
+```{r}
+ggplot(data = mpg, mapping = aes(x = displ, y = hwy)) + 
+  geom_point(mapping = aes(color = class)) + 
+  geom_smooth(data = filter(mpg, class == "subcompact"), se = FALSE)
+```
 
 
 #### Section 3.6.1 Questions
@@ -284,6 +394,49 @@ ggplot(data = mpg) +
 
 ### Section 3.8 Position adjustments
 
+Bar graph
+```{r}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, colour = cut))
+```
+Bar graph with color 
+```{r}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, fill = cut))
+```
+Bar graph with colored position adjustment 
+
+```{r}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, fill = clarity))
+```
+Bar graph with low alpha position adjustment 
+```{r}
+ggplot(data = diamonds, mapping = aes(x = cut, fill = clarity)) + 
+  geom_bar(alpha = 1/5, position = "identity")
+```
+
+Bar graph without fill
+```{r}
+ggplot(data = diamonds, mapping = aes(x = cut, colour = clarity)) + 
+  geom_bar(fill = NA, position = "identity")
+```
+Bar graph with fill
+```{r}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, fill = clarity), position ="fill")
+```
+Bar graph with dodge position 
+```{r}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, fill = clarity), position="dodge")
+```
+Scatterplot with jitter
+```{r}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy), position = "jitter")
+```
+
 
 #### Section 3.8 Questions
 
@@ -313,6 +466,19 @@ ggplot(mpg, aes(displ, hwy)) +
 ### Section 3.9: Coordinate systems
 
 **Note:** Read about and do only the code chunk associated with `coord_flip()`. `coord_flip()` is a great layer to use when you have categorical data with longish names as it makes the text easier to read.
+
+Box plot
+```{r}
+ggplot(data = mpg, mapping = aes(x = class, y = hwy)) + 
+  geom_boxplot()
+```
+Box plot with coord_flip()
+```{r}
+ggplot(data = mpg, mapping = aes(x = class, y = hwy)) + 
+  geom_boxplot() +
+  coord_flip()
+```
+
 
 ```{r}
 ggplot(data = mpg, mapping = aes(x = class, y = hwy)) + 
