--- a/HW09/russom_hw09.Rmd
+++ b/HW09/russom_hw09.Rmd
@@ -219,17 +219,25 @@ ggplot(data=site_sorted_feathers_data)+
 ### Plot 2 feathers data
 ```{r}
 ggplot(data=summarized_feathers_data)+
-  geom_point(mapping=aes(x=site,y=basal_mean))+
-  geom_errorbar(aes(x=site, ymin=std_err_basal-1,ymax=std_err_basal+1))
+  geom_point(mapping=aes(x=site,y=basal_mean),size=3, color ="maroon")+
+  geom_errorbar(aes(x=site, ymin=std_err_basal-1,ymax=std_err_basal+1),width = .3)
 ```
 
 ### the assignment wanted us to plot the basal cortico concetration for each site, I hope this only meant the mean vaule and not all the collected vaules, because that's what we did :/
 
+### Plot 3 feathers data
+
+```{r}
+ggplot(data=summarized_feathers_data)+
+  geom_point(mapping=aes(x=site,y=stress_mean))+
+  geom_linerange(mapping = aes(x=site,ymin=std_err_cort-1,ymax=std_err_cort+1))
+```
+
+### I am starting to doubt my functions were written correctly... why is the standard error of the mean so far from the mean vaules? :(
 
 
 
-
-
+### I completed the graduate requirements on plot 2 of the feathers data,  However, I could not figure out how to get the line to pass behind the dots.  I tried using the aesthetics linetyp and alpha, but these only broke the line of diminished the line color. 
 
 
 
