--- a/HW10/russom_10.rmd
+++ b/HW10/russom_10.rmd
@@ -141,3 +141,90 @@ p_culmen+p_nalospi+p_wt+p_wingcrd+p_tarsus+p_head
 
 ### the variables nalospi, tarsus, and head appear to have outlier data
 
+### figure 5 distribution
+```{r}
+h1 <- sparrows %>%
+  filter(Month %in% 6:8) %>% 
+  ggplot() +
+  geom_histogram(aes(x = wt),
+                 binwidth = 0.5,
+                 boundary = 0,
+                 closed = "right",
+                 color = "black") +
+  scale_x_continuous(breaks = seq(14, 28, by = 2))
+```
+
+# faceted histogram
+```{r}
+h2 <- sparrows %>%
+  filter(Month %in% 6:8) %>% 
+  mutate(Month = case_when(
+    Month == 6 ~ "June",
+    Month == 7 ~ "July",
+    Month == 8 ~ "August")) %>% 
+  ggplot() +
+  geom_histogram(aes(x = wt),
+                 binwidth = 0.5,
+                 boundary = 0,
+                 color = "black") +
+  scale_x_continuous(breaks = seq(14, 28, by = 2)) +
+  facet_wrap(~ Month, ncol = 1)
+```
+### patchwork
+```{r}
+h1+h2
+```
+### Recreate figure using density
+### Create plot 1
+```{r}
+dens1 <- sparrows %>%
+  filter(Month %in% 6:8) %>% 
+  ggplot() +
+  geom_density(aes(x = wt)) +
+  scale_x_continuous(breaks = seq(14, 28, by = 2))
+```
+### Create plot2
+```{r}
+dens2 <- sparrows %>%
+  filter(Month %in% 6:8) %>% 
+  mutate(Month = case_when(
+    Month == 6 ~ "June",
+    Month == 7 ~ "July",
+    Month == 8 ~ "August")) %>% 
+  ggplot() +
+  geom_density(aes(x = wt, fill= Month), alpha= 0.50) +
+  scale_x_continuous(breaks = seq(14, 28, by = 2))
+```
+
+### patching density plots together
+```{r}
+dens1+dens2
+```
+### scatterplot panels
+
+```{r}
+sparrows %>% ggscatmat(columns = 1:7)
+```
+
+### figure 11 plots
+```{r}
+month_order = c("May", "June", "July", "August", "September")
+sparrows %>% 
+  filter(Month %in% 5:9,
+         Sex != 0) %>% 
+  mutate(Month = case_when(
+    Month == 5 ~ "May",
+    Month == 6 ~ "June",
+    Month == 7 ~ "July",
+    Month == 8 ~ "August",
+    Month == 9 ~ "September"),
+    Month = factor(Month, levels = month_order, ordered = TRUE),
+    Sex = ifelse(Sex == 4, "Male", "Female")) %>% 
+  ggplot(aes(x = wingcrd,
+             y = wt)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = FALSE) +
+  facet_grid(Sex ~ Month)
+```
+
+
