--- a/HW11/russom_hw11.Rmd
+++ b/HW11/russom_hw11.Rmd
@@ -42,6 +42,7 @@ crabs_data %>%
   ggplot(aes(x = box_group, 
              y = Width)) +
   geom_boxplot(width = 0.25)
+
 ```
 ### 1 possible outlier found in width data
 
@@ -51,6 +52,7 @@ crabs_data %>%
   ggplot(aes(x = box_group, 
              y = Depth)) +
   geom_boxplot(width = 0.25)
+
 ```
 ### 2 possible outliers found
 
@@ -60,6 +62,7 @@ crabs_data %>%
   ggplot(aes(x = box_group, 
              y = Flow)) +
   geom_boxplot(width = 0.25)
+
 ```
 
 ### mutiple possible outliers
@@ -71,6 +74,7 @@ crabs_data %>%
   ggplot(aes(x = box_group, 
              y = pH)) +
   geom_boxplot(width = 0.25)
+
 ```
 
 ### 2 possible outliers
@@ -83,6 +87,7 @@ crabs_data %>%
   geom_boxplot(width = 0.25) +
   labs(x = NULL,
        y = "Total Dissolved Solids")
+
 ```
 ### No outliers observed
 
@@ -95,6 +100,7 @@ crabs_data %>%
   geom_boxplot(width = 0.25) +
   labs(x = NULL,
        y = "Conductivity")
+
 ```
 ### no outliers
 
@@ -106,6 +112,7 @@ crabs_data %>%
   geom_boxplot(width = 0.25) +
   labs(x = NULL,
        y = "Nitrogen")
+
 ```
 ### 2 possible outliers
 ### exploring nitrate outliers
@@ -116,6 +123,7 @@ crabs_data %>%
   geom_boxplot(width = 0.25) +
   labs(x = NULL,
        y = "Nitrate")
+
 ```
 ## No outliers
 
@@ -126,7 +134,8 @@ crabs_data %>%
              y = Nt)) +
   geom_boxplot(width = 0.25)+
    labs(x = NULL,
-       y = "Nitrite Concentrations")
+        y = "Nitrite Concentrations")
+
 ```
 ## Multiple possible outliers
 
@@ -137,7 +146,8 @@ crabs_data %>%
              y = Phos)) +
   geom_boxplot(width = 0.25)+
    labs(x = NULL,
-       y = "Phosphate")
+        y = "Phosphate")
+
 ```
 ## Two outliers
 
@@ -148,7 +158,8 @@ crabs_data %>%
              y = Mg)) +
   geom_boxplot(width = 0.25)+
    labs(x = NULL,
-       y = "Magnesium")
+        y = "Magnesium")
+
 ```
 ## No outliers
 
@@ -159,8 +170,163 @@ crabs_data %>%
              y = Ca)) +
   geom_boxplot(width = 0.25)+
    labs(x = NULL,
-       y = "Calcium concentrations")
+        y = "Calcium concentrations")
 ```
 ## No outliers
 
 #### Overall data interpretation is that the variables which most likely contain outliers are width, depth, pH, phosphate, and nitrogen.  The variables flow and nitrate contained mutiple possible outlier points. The variables TDS, Cond, Ni, MG, and Ca contained no possible outliers. The data must be further explored to determine if possible outliers are truly outliers. 
+
+### Cleveland plot #1
+```{r}
+clev_width <- crabs_data %>% 
+  ggplot(aes(x = Width,
+             y = row_order)) +
+  geom_point() +
+  labs(x = "Width",
+       y = "Order of the data")
+clev_width
+
+```
+### most likely what was reported as a possible outlier was just an upper vaule limit
+
+### Cleveland plot #2
+```{r}
+clev_depth <- crabs_data %>% 
+  ggplot(aes(x = Depth,
+             y = row_order)) +
+  geom_point() +
+  labs(x = "Depth",
+       y = "Order of the data")
+clev_depth
+
+```
+### Depth of 5 is most likely an outlier
+
+### Cleveland plot #3
+```{r}
+clev_pH <- crabs_data %>% 
+  ggplot(aes(x = pH,
+             y = row_order)) +
+  geom_point() +
+  labs(x = "pH",
+       y = "Order of the data")
+clev_pH
+
+```
+###### most likely what was reported as a possible outlier was just an upper or lower vaule limit
+
+### Cleveland plot #4
+```{r}
+clev_nitro <- crabs_data %>% 
+  ggplot(aes(x = N,
+             y = row_order)) +
+  geom_point() +
+  labs(x = "Nitrogen",
+       y = "Order of the data")
+clev_nitro
+
+
+```
+### most likely what was reported as a possible outlier was just an upper vaule limit
+
+### patchwork of Cleveland plots
+```{r}
+clev_width+clev_depth+clev_pH+clev_nitro
+```
+### constructing histograms
+
+### width histogram
+```{r}
+h1 <- crabs_data %>%
+  ggplot() +
+  geom_histogram(aes(x = Width),
+                 binwidth = 1,
+                 boundary = 0,
+                 closed = "right",
+                 color = "black") +
+  scale_x_continuous(breaks = seq(1, 14, by = 2))
+h1
+
+```
+### depth histogram
+```{r}
+h2 <- crabs_data %>%
+  ggplot() +
+  geom_histogram(aes(x = Depth),
+                 binwidth = .5,
+                 boundary = 0,
+                 closed = "right",
+                 color = "black") +
+  scale_x_continuous(breaks = seq(0, 5, by = .5))
+h2
+
+```
+### obvious outlier noted
+
+### pH histogram
+```{r}
+h3 <- crabs_data %>%
+  ggplot() +
+  geom_histogram(aes(x = pH),
+                 binwidth = .1,
+                 boundary = 0,
+                 closed = "right",
+                 color = "black") +
+  scale_x_continuous(breaks = seq(6, 8, by = .25))
+h3
+
+```
+### density plots
+
+### width density plot
+```{r}
+dens1 <- crabs_data %>%
+  ggplot() +
+  geom_density(aes(x = Width)) +
+  scale_x_continuous(breaks = seq(1, 14, by = 2))
+dens1
+
+```
+
+### depth density plot
+```{r}
+dens2 <- crabs_data %>%
+  ggplot() +
+  geom_density(aes(x = Depth)) +
+  scale_x_continuous(breaks = seq(0, 5, by = .5))
+dens2
+
+```
+### pH density plot
+```{r}
+dens3 <- crabs_data %>%
+  ggplot() +
+  geom_density(aes(x = pH)) +
+  scale_x_continuous(breaks = seq(6, 8, by = .25))
+dens3
+```
+
+### hitogram and density plot patchworks
+
+### Patchwork #1 - width 
+```{r}
+h1+dens1
+```
+
+### patchwork #2 - depth
+
+```{r}
+h2+dens2
+```
+
+### patchwork #3 - pH
+```{r}
+h3+dens3
+```
+### using ggpairs to investigate relationship among all variables
+
+```{r}
+crabs_data %>% ggpairs(columns = 1:12)
+```
+
+### We made it, but lost as to its interpretation 
