--- a/HW12/russom_12.Rmd
+++ b/HW12/russom_12.Rmd
@@ -280,7 +280,20 @@ raw_thebes
 thebes_tidy <- raw_thebes %>%
   pivot_longer("1988":"2018",
                names_to ="Year",
-               values_to= "Discharge")
+               values_to= "Discharge")%>% 
+ mutate(Month = case_when(
+   Month == 1 ~ "Jan",
+   Month == 2 ~ "Feb",
+   Month == 3 ~ "Mar",
+   Month == 4 ~ "Apr",
+   Month == 5 ~ "May",
+    Month == 6 ~ "June",
+    Month == 7 ~ "July",
+    Month == 8 ~ "Aug",
+   Month == 9 ~ "Sep",
+   Month == 10 ~ "Oct",
+   Month == 11 ~ "Nov",
+   Month == 12 ~ "Dec"))  
 thebes_tidy
 ```
 ###Group by year and month 
@@ -290,12 +303,13 @@ thebes_tidy_grouped
 ```
 ### Sumarrize the mean discharge
 ```{r}
-thebes_tidy_grouped %>% 
+thebes_mean <- thebes_tidy_grouped %>% 
   summarise(count = n(),Discharge = mean(Discharge, na.rm = TRUE))
+thebes_mean
 ```
 ### Add event column 
 ```{r}
-thebes_tidy_w_events <- thebes_tidy_grouped %>%
+thebes_tidy_w_events <- thebes_mean %>%
   mutate(Event = case_when(Year==1993 | Year == 2011 ~ 'Flood',
                            Year== 1988 | Year == 2012 ~ 'Drought',TRUE ~ 'Normal'))
 
@@ -304,13 +318,27 @@ thebes_tidy_w_events
 ### Formation of 2nd data set
 ```{r}
 thebes_major_events <- thebes_tidy_w_events %>% 
-  filter(Event == "Drought", Event == "Flood")
+  filter(Year%in%c("1988", "1993", "2011", "2012"))
 thebes_major_events
 ```
 
 
-
-
-
 ### Plot of the mean discharge by month 
+```{r}
+p1 <- ggplot(data = thebes_tidy_w_events) +
+  geom_line(mapping = aes(x = Month, y = Discharge, group = Year), size = 0.3, color='gray70')
+p1
+
+```
+### add smaller data set
+```{r}
+ggplot(data = thebes_tidy_w_events) +
+geom_line(mapping = aes(x = Month, y = Discharge, group = Year), size = 0.3, color = 'gray70') +
+geom_line(data = thebes_major_events, mapping = aes( x = Month, y = Discharge, group = Year, color = Event))
+
+```
+
+
+### close but no cigar, I did not divide my discharge vaules by 1000, so my y axis is very different from the example
+
 
