attempting to wrangle ants data

--- a/HW13/russom_hw13.Rmd
+++ b/HW13/russom_hw13.Rmd
@@ -108,4 +108,25 @@ promotor
 ```{r}
 str_length(promotor)
 ```
+### Part 2: Ants
+
+### Import ants data
+```{r}
+ants_raw <- read_csv(here("Data", "ants.csv"))
+ants_raw
+```
+```{r}
+ants_data_wrangled <- ants_raw %>% 
+  pivot_longer(names_to="species",values_to="abundance",matches("[:upper:].+\\.[:lower:].+", ignore.case = FALSE)) %>% 
+  select("year", "species", "abundance")
+ants_data_wrangled
+```
+
+```{r}
+ants_data_wrangled %>% 
+  mutate(species = str_replace(species, "C....+\\.line.+","Cremline")) %>% 
+  mutate(species = str_replace(species,"H....+\\.opac.+", "Hypoopac")) %>% 
+  mutate(species = str_replace(species, "N....+\\.opac.+", "Neivopac")) %>% 
+  mutate(species = str_replace(species, "S....+\\.loui.+", "Struloui")) %>% 
+```
 
