joined flower data

--- a/HW13/russom_hw13.Rmd
+++ b/HW13/russom_hw13.Rmd
@@ -149,6 +149,65 @@ ggplot(final_ants_data,aes(x = reorder(species,total),y = total),group = species
   labs(x = NULL, y = "Total Abundance", shape = "Year") +
 theme_minimal() 
 ```
+### part 3
+### Import and wrangle the first data set
+```{r}
+flower_size_raw <- read_csv(here("Data", "flower_size.csv")) 
+flower_size_raw
+```
+### filter out flower number na values
+```{r}
+flower_data_filtered <- drop_na(flower_size_raw, "Flower number")
+flower_data_filtered
+```
+### select and rename columns 
+```{r}
+wrangled_flower_data <- select(flower_data_filtered, "Species", "Corolla length (cm)", "Corolla width throat (cm)") %>% 
+  rename("species" = "Species", "cor_length" = "Corolla length (cm)", "throat_width" = "Corolla width throat (cm)")
+wrangled_flower_data
 
+```
+### use seperate to seperate genus and species
+```{r}
+separated_flowers <- wrangled_flower_data %>% 
+  separate(species, into = c("genus", "species"))
+separated_flowers
+```
+### group data and use summarize to calculate the mean and max lengths and widths
+```{r}
+summarized_flower_data <- separated_flowers %>%
+  group_by(genus, species) %>% 
+  summarize("mean_cor_length" = mean(cor_length, na.rm = TRUE), "mean_throat_width" = mean(throat_width, na.rm = TRUE), "max_cor_length" = max(cor_length, na.rm = TRUE), "max_throat_width"= max(throat_width, na.rm = TRUE))
+summarized_flower_data
+```
+### import and wrangle the second data set
 
+### import data 
+```{r}
+pollinators_raw <- read_csv(here("Data", "flower_pollinators.csv"))
+pollinators_raw
+```
+
+### remove columns, remove rows, seperate into genus and species 
+```{r}
+pollinators <- pollinators_raw %>%
+   select(-c(starts_with("Source"), "Color")) %>%
+   filter(!is.na(Pollinator)) %>%
+   separate(Species, into = c("genus", "species")) 
+pollinators
+   
+```
+### seperate pollinator column 
+```{r}
+syndrome <- pollinators %>% 
+ separate(Pollinator, into = "primary pollinator", sep = "(,| )")
+ syndrome
+
+```
+
+### use inner_join
+```{r}
+phlox_data <- inner_join(summarized_flower_data, syndrome)
+phlox_data
+```
 
